--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 	</div>
 	<div class="empty"></div>
 	<div class="footer">
-		<a href="/menu.html" class="menu"><img src="menu_logo.png" alt="" class="menu_logo"></a>
+		<a href="./menu.html" class="menu"><img src="menu_logo.png" alt="" class="menu_logo"></a>
 		<a href="/" class="home"><img src="home_logo.png" alt="" class="menu_logo"></a>
-		<a href="/profile.html" class="profile"><img src="profile_logo.png" alt="" class="menu_logo"></a>
+		<a href="./profile.html" class="profile"><img src="profile_logo.png" alt="" class="menu_logo"></a>
 	</div>
 
 
